<?xml version="1.0"?>
<package format="2">
  <name>bike_rl_agent</name>
  <version>0.1.0</version>
  <description>The bike_rl_agent package contains the OpenAI Gym environment and training scripts for the self-balancing bike.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>python3-gym</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- Dependencies for Stable Baselines, PyTorch, etc., are expected to be installed via pip -->

  <export>
  </export>
</package>
