<?xml version="1.0"?>
<package format="2">
  <name>two_wheel_bike_description</name>
  <version>0.1.0</version>
  <description>The two_wheel_bike_description package contains the URDF, world, and launch files for the self-balancing bike simulation.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
